Fixed banner's overflowing layout

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,6 +19,14 @@ main {
   flex: 1 0 auto;
 }
 
+@media screen and (max-device-width: 767px) {
+  .force-column {
+    flex-direction: column !important;
+    align-items: center !important;
+    text-align: center !important;
+  }
+}
+
 .swiper-button-next,
 .swiper-button-prev {
   color: gray !important;
